# cp-dataset-gui

./: .gitignore  README.md  build.py  main.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
