[project]
name = "cp-dataset-gui"
version = "1.0.0"
description = "A collection and GUI for managing, visualizing, and analyzing competitive programming datasets with a PyQt6 GUI."
readme = "README.md"
requires-python = ">=3.12"
keywords = [
    "competitive-programming",
    "dataset",
    "GUI",
    "PyQt6",
    "visualization",
    "analysis"
]
authors = [
    { name = "Muhammad Fiaz", email = "contact@muhammadfiaz.com" }
]
maintainers = [
    { name = "Muhammad Fiaz", email = "contact@muhammadfiaz.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Education",
    "Topic :: Utilities",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent"
]
dependencies = [
    "db-sqlite3>=0.0.1",
    "matplotlib>=3.10.5",
    "pyqt6>=6.9.1",
]

[project.urls]
Homepage = "https://github.com/muhammad-fiaz/cp-dataset-gui"
Documentation = "https://github.com/muhammad-fiaz/cp-dataset-gui#readme"
Source = "https://github.com/muhammad-fiaz/cp-dataset-gui"
Issues = "https://github.com/muhammad-fiaz/cp-dataset-gui/issues"

[dependency-groups]
dev = [
    "pyinstaller>=6.15.0",
    "ruff>=0.12.8",
]
